[WFCORE-7651] Remove the setModularJdk startup script function